--- a/src/scss/reseter.scss
+++ b/src/scss/reseter.scss
@@ -1,10 +1,12 @@
 @charset "UTF-8";
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   scroll-behavior: smooth;
-  @media (prefers-reduced-motion: reduce) {
+
+  @media ( prefers-reduced-motion: reduce ) {
     animation-delay: -1ms;
     animation-duration: 1ms;
     animation-iteration-count: 1;
@@ -101,15 +103,24 @@ video {
   margin: 0;
   padding: 0;
   border: none;
-  font-size: 100%;
   font: inherit;
+  font-size: 100%;
   vertical-align: baseline;
 }
 
 html {
-  font-family: system-ui, -apple-system, "Segoe UI", "Roboto", "Ubuntu",
-    "Cantarell", "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: system-ui,
+    -apple-system,
+    "Segoe UI",
+    Roboto,
+    Ubuntu,
+    Cantarell,
+    "Noto Sans",
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -144,6 +155,7 @@ hr {
   border: 0;
   opacity: 0.25;
   overflow: visible;
+
   &:not([size]) {
     height: 1px;
   }
@@ -163,28 +175,32 @@ h6 {
 
 h1 {
   font-size: calc(1.375rem + 1.5vw);
-  @media (min-width: 1200px) {
+
+  @media ( min-width: 1200px ) {
     font-size: 2.5rem;
   }
 }
 
 h2 {
   font-size: calc(1.325rem + 0.9vw);
-  @media (min-width: 1200px) {
+
+  @media ( min-width: 1200px ) {
     font-size: 2rem;
   }
 }
 
 h3 {
   font-size: calc(1.3rem + 0.6vw);
-  @media (min-width: 1200px) {
+
+  @media ( min-width: 1200px ) {
     font-size: 1.75rem;
   }
 }
 
 h4 {
   font-size: calc(1.275rem + 0.3vw);
-  @media (min-width: 1200px) {
+
+  @media ( min-width: 1200px ) {
     font-size: 1.5rem;
   }
 }
@@ -204,7 +220,6 @@ p {
 
 abbr[title],
 abbr[data-bs-original-title] {
-  text-decoration: underline;
   -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
   cursor: help;
@@ -240,6 +255,7 @@ ul ol {
 nav li {
   list-style: none;
   padding: 0;
+
   &::before {
     content: "​";
   }
@@ -290,16 +306,19 @@ sup {
 
 a {
   cursor: pointer;
-  color: #3434e0;
+  color: rgb(51, 51, 225);
   background-color: transparent;
   text-decoration: none;
+
   &:hover {
-    color: #3434e0;
+    color: rgb(52, 52, 224);
     text-decoration: underline;
   }
+
   &:focus {
     outline: thin dotted;
   }
+
   &:not([href]):not(class),
   &:not([href]):not([class]):hover {
     cursor: default;
@@ -324,9 +343,18 @@ pre,
 code,
 kbd,
 samp {
-  font-family: "Menlo", "Consolas", "Roboto Mono", "Ubuntu Monospace",
-    "Noto Mono", "Oxygen Mono", "Liberation Mono", monospace,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Menlo,
+    Consolas,
+    "Roboto Mono",
+    "Ubuntu Monospace",
+    "Noto Mono",
+    "Oxygen Mono",
+    "Liberation Mono",
+    monospace,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
   font-size: 1em;
 }
 
@@ -334,10 +362,10 @@ pre {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
-  overflow: auto;
   font-size: 0.875em;
   overflow: auto;
   -ms-overflow-style: scrollbar;
+
   code {
     font-size: inherit;
     color: inherit;
@@ -361,6 +389,7 @@ kbd {
   color: inherit;
   background-color: inherit;
   border-radius: 0.2rem;
+
   kbd {
     padding: 0;
     font-size: 1em;
@@ -391,9 +420,11 @@ video {
 }
 
 svg {
+
   &:not([fill]) {
     fill: currentColor;
   }
+
   &:not(:root) {
     overflow: hidden;
   }
@@ -440,6 +471,7 @@ label {
 button {
   border-radius: 0;
   text-transform: none;
+
   &:focus {
     outline: dotted 1px;
     outline: -webkit-focus-ring-color auto 5px;
@@ -488,6 +520,7 @@ select {
   -webkit-appearance: none;
   text-transform: none;
   word-wrap: normal;
+
   &:not([multiple]):not([size]) {
     background-image: "data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='4'%3E%3Cpath d='M4 0h6L7 4'/%3E%3C/svg%3E";
   }
@@ -506,22 +539,15 @@ button,
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
+
   &:not(disabled) {
     cursor: pointer;
   }
 }
 
-::-moz-focus-inner {
-  padding: 0;
-  border-style: none;
-}
-
-:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-:-moz-ui-invalid {
-  box-shadow: none;
+::-webkit-file-upload-button {
+  font: inherit;
+  -webkit-appearance: button;
 }
 
 textarea {
@@ -547,9 +573,11 @@ legend {
   line-height: inherit;
   max-width: 100%;
   white-space: normal;
-  @media (max-width: 1200px) {
+
+  @media ( max-width: 1200px ) {
     font-size: 1.5rem;
   }
+
   & + * {
     clear: left;
   }
@@ -571,10 +599,12 @@ dialog {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+
   &:not([open]) {
     display: none;
   }
 }
+
 ::-webkit-datetime-edit-fields-wrapper,
 ::-webkit-datetime-edit-text,
 ::-webkit-datetime-edit-minute,
@@ -621,13 +651,17 @@ input[type="search"]::-webkit-search-results-decoration {
   padding: 0;
 }
 
-::file-selector-button {
-  font: inherit;
+::-moz-focus-inner {
+  padding: 0;
+  border-style: none;
 }
 
-::-webkit-file-upload-button {
-  font: inherit;
-  -webkit-appearance: button;
+:-moz-ui-invalid {
+  box-shadow: none;
+}
+
+:-moz-focusring {
+  outline: 1px dotted ButtonText;
 }
 
 output {
@@ -685,6 +719,7 @@ template {
 
 [aria-hidden="false"][hidden="false"] {
   display: initial;
+
   &:not(:focus) {
     clip: rect(0, 0, 0, 0);
     position: absolute;
