:adhesive_bandage: Change Code Font family Fix #5

--- a/src/less/reseter.less
+++ b/src/less/reseter.less
@@ -106,18 +106,9 @@ video {
   vertical-align: baseline;
 }
 html {
-  font-family: system-ui,
-    -apple-system,
-    "Segoe UI",
-    Roboto,
-    Ubuntu,
-    Cantarell,
-    "Noto Sans",
-    sans-serif,
-    "Apple Color Emoji",
-    "Segoe UI Emoji",
-    "Segoe UI Symbol",
-    "Noto Color Emoji";
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell,
+    "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -306,18 +297,11 @@ pre,
 code,
 kbd,
 samp {
-  font-family: Menlo,
-    Consolas,
-    "Roboto Mono",
-    "Ubuntu Monospace",
-    "Noto Mono",
-    "Oxygen Mono",
-    "Liberation Mono",
-    monospace,
-    "Apple Color Emoji",
-    "Segoe UI Emoji",
-    "Segoe UI Symbol",
-    "Noto Color Emoji";
+  font-family: "Fira Code", "Cascadia Code", Consolas, "Inconsolata", Monaco,
+    Menlo, "Noto Mono", "Roboto Mono", "Droid Sans Mono", "Ubuntu Mono",
+    "Ubuntu Monospace", "Source Code Pro", "Oxygen Mono", "Liberation Mono",
+    "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1em;
 }
 pre {
