--- a/src/stylus/reseter.styl
+++ b/src/stylus/reseter.styl
@@ -297,23 +297,12 @@ summary,
 textarea,
 [tabindex]
   touch-action: manipulation
-
+ 
 pre,
 code,
 kbd,
 samp
-  font-family: Menlo,
-    Consolas,
-    "Roboto Mono",
-    "Ubuntu Monospace",
-    "Noto Mono",
-    "Oxygen Mono",
-    "Liberation Mono",
-    monospace,
-    "Apple Color Emoji",
-    "Segoe UI Emoji",
-    "Segoe UI Symbol",
-    "Noto Color Emoji";
+  font-family: "Fira Code", "Cascadia Code", Consolas, "Inconsolata", Monaco, Menlo, "Noto Mono", "Roboto Mono", "Droid Sans Mono", "Ubuntu Mono", "Ubuntu Monospace", "Source Code Pro", "Oxygen Mono", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1em
 
 pre
