fix nicolas-cusan/destyle.css#16 in reseter.css

--- a/src/less/reseter.less
+++ b/src/less/reseter.less
@@ -372,6 +372,7 @@ table {
   caption-side: bottom;
   border-collapse: collapse;
   text-indent: 0;
+  border-color: currentColor;
 }
 caption {
   padding-top: 0.5rem;
