--- a/src/sass/reseter.sass
+++ b/src/sass/reseter.sass
@@ -362,6 +362,7 @@ table
   caption-side: bottom
   border-collapse: collapse
   text-indent: 0
+  border-color: currentColor
 
 caption
   padding-top: 0.5rem
