--- a/src/scss/reseter.scss
+++ b/src/scss/reseter.scss
@@ -372,6 +372,7 @@ table {
   caption-side: bottom;
   border-collapse: collapse;
   text-indent: 0;
+  border-color: currentColor;
 }
 caption {
   padding-top: 0.5rem;
