Add Word Break To HTML

--- a/src/sass/reseter.sass
+++ b/src/sass/reseter.sass
@@ -112,6 +112,7 @@ html
   line-height: 1.5
   color: inherit
   background-color: inherit
+  word-break: normal
   -webkit-text-size-adjust: 100%
   -webkit-tap-highlight-color: transparent
 
