--- a/src/scss/reseter.scss
+++ b/src/scss/reseter.scss
@@ -112,6 +112,7 @@ html {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
+  word-break: normal;
   color: inherit;
   background-color: inherit;
   -webkit-text-size-adjust: 100%;
