--- a/src/stylus/reseter.styl
+++ b/src/stylus/reseter.styl
@@ -111,6 +111,7 @@ html
   font-weight: 400
   line-height: 1.5
   color: inherit
+  word-break: normal;
   background-color: inherit
   -webkit-text-size-adjust: 100%
   -webkit-tap-highlight-color: transparent
