--- a/src/sass/reseter.sass
+++ b/src/sass/reseter.sass
@@ -1,12 +1,11 @@
 @charset "UTF-8"
-
 *,
 *::before,
-*::after
+*::after 
   box-sizing: border-box
   scroll-behavior: smooth
 
-  @media ( prefers-reduced-motion: reduce )
+  @media (prefers-reduced-motion: reduce) 
     animation-delay: -1ms
     animation-duration: 1ms
     animation-iteration-count: 1
@@ -15,104 +14,14 @@
     transition-delay: 0s
     transition-duration: 0s
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video
-  cursor: default
-  tab-size: 4
+html 
+  font: 400 1rem/1.5 system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+  background: inherit
+  vertical-align: baseline
+  word-break: normal
+  color: inherit
   margin: 0
   padding: 0
-  border: none
-  font: inherit
-  font-size: 100%
-  vertical-align: baseline
-
-html
-  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
-  font-size: 1rem
-  font-weight: 400
-  line-height: 1.5
-  color: inherit
-  background-color: inherit
-  word-break: normal
   -webkit-text-size-adjust: 100%
   -webkit-tap-highlight-color: transparent
 
@@ -126,156 +35,152 @@ header,
 hgroup,
 menu,
 nav,
-section
+section 
   display: block
 
-[tabindex="-1"]:focus:not(:focus-visible)
+[tabindex="-1"]:focus:not(:focus-visible) 
   outline: 0
 
-hr
+hr 
   margin: 1rem 0
   color: inherit
   background-color: currentColor
   border: 0
   opacity: 0.25
   overflow: visible
-
-  &:not([size])
+  &:not([size]) 
     height: 1px
+  
 
 h1,
 h2,
 h3,
 h4,
 h5,
-h6
-  margin-top: 0
-  margin-bottom: 0.5rem
-  font-weight: 500
-  line-height: 1.2
+h6 
+  margin: 0 initial 0.5rem
+  font: inherit inherit 500 unset/1.2 inherit
 
-h1
+h1 
   font-size: calc(1.375rem + 1.5vw)
 
-  @media ( min-width: 1200px )
+  @media (min-width: 1200px) 
     font-size: 2.5rem
+  
 
-h2
+h2 
   font-size: calc(1.325rem + 0.9vw)
 
-  @media ( min-width: 1200px )
+  @media (min-width: 1200px) 
     font-size: 2rem
-
-h3
-  font-size: calc(1.3rem + 0.6vw)
   
-  @media ( min-width: 1200px )
-    font-size: 1.75rem
 
-h4
+h3 
+  font-size: calc(1.3rem + 0.6vw)
+
+  @media (min-width: 1200px) 
+    font-size: 1.75rem
+  
+
+h4 
   font-size: calc(1.275rem + 0.3vw)
 
-  @media ( min-width: 1200px )
+  @media (min-width: 1200px) 
     font-size: 1.5rem
+  
 
-h5
+h5 
   font-size: 1.25rem
 
-h6
+h6 
   font-size: 1rem
 
-p
-  margin-top: 0
-  margin-bottom: 1rem
+p 
+  margin: 0 0 1rem
 
 abbr[title],
-abbr[data-bs-original-title]
-  -webkit-text-decoration: underline dotted
+abbr[data-bs-original-title] 
   text-decoration: underline dotted
   cursor: help
-  -webkit-text-decoration-skip-ink: none
   text-decoration-skip-ink: none
 
-address
-  margin-bottom: 1rem
-  font-style: normal
-  line-height: inherit
+address 
+  font: normal inherit inherit/inherit inherit
+  margin: 0 0 1rem
 
 ol,
-ul
+ul 
   padding-left: 2rem
 
 ol,
 ul,
-dl
-  margin-top: 0
-  margin-bottom: 1rem
+dl 
+  margin: 0 0 1rem
 
 ol ol,
 ul ul,
 ol ul,
-ul ol
-  margin-bottom: 0
+ul ol 
+  margin: 0
 
-nav li
+nav li 
   list-style: none
   padding: 0
-
-  &::before
+  &::before 
     content: "​"
 
-dt
+dt 
   font-weight: 700
 
-dd
+dd 
   margin-bottom: 0.5rem
   margin-left: 0
 
-blockquote
+blockquote 
   margin: 0 0 1rem
 
 b,
-strong
-  font-weight: bolder
+strong 
+  font-weight: 700
 
-small
+small 
   font-size: 0.875em
 
-mark
+mark 
   padding: 0.2em
   background-color: currentColor
 
 sub,
-sup
+sup 
   position: relative
   font-size: 0.75em
   line-height: 0
   vertical-align: baseline
 
-sub
+sub 
   bottom: -0.25em
 
-sup
+sup 
   top: -0.5em
 
-a
+a 
   cursor: pointer
   color: rgb(51, 51, 225)
   background-color: transparent
   text-decoration: none
-
-  &:hover
+  &:hover 
     color: rgb(52, 52, 224)
     text-decoration: underline
-
-  &:focus
+  
+  &:focus 
     outline: thin dotted
-
+  
   &:not([href]):not(class),
-  &:not([href]):not([class]):hover
+  &:not([href]):not([class]):hover 
     cursor: default
     color: inherit
     text-decoration: none
+  
 
 a,
 area,
@@ -285,57 +190,56 @@ label,
 select,
 summary,
 textarea,
-[tabindex]
+[tabindex] 
   touch-action: manipulation
 
 pre,
 code,
 kbd,
-samp
-  font-family: "Fira Code", "Cascadia Code", Consolas, "Inconsolata", Monaco, Menlo, "Noto Mono", "Roboto Mono", "Droid Sans Mono", "Ubuntu Mono", "Ubuntu Monospace", "Source Code Pro", "Oxygen Mono", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
-  font-size: 1.05em
+samp 
+  font: 1.05em "Fira Code", "Cascadia Code", Consolas, "Inconsolata", Monaco, Menlo, "Noto Mono", "Roboto Mono", "Droid Sans Mono", "Ubuntu Mono", "Ubuntu Monospace", "Source Code Pro", "Oxygen Mono", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
-pre
+pre 
   display: block
   margin-top: 0
   margin-bottom: 1rem
   font-size: 0.875em
   overflow: auto
   -ms-overflow-style: scrollbar
-
-  code
+  code 
     font-size: inherit
     color: inherit
     word-break: normal
+  
 
-code
+code 
   font-size: 0.875em
   color: inherit
   word-wrap: break-word
 
-a > code
+a > code 
   color: inherit
 
-kbd
+kbd 
   padding: 0.2rem 0.4rem
   font-size: 0.875em
   color: inherit
   background-color: inherit
   border-radius: 0.2rem
-
-  kbd
+  kbd 
     padding: 0
     font-size: 1em
     font-weight: 700
+  
 
-figure
+figure 
   margin: 0 0 1rem
 
 iframe,
 img,
 input,
 select,
-textarea
+textarea 
   height: auto
   max-width: 100%
 
@@ -344,34 +248,34 @@ canvas,
 iframe,
 img,
 svg,
-video
+video 
   vertical-align: middle
 
-svg
-
-  &:not([fill])
+svg 
+  &:not([fill]) 
     fill: currentColor
-
-  &:not(:root)
+  
+  &:not(:root) 
     overflow: hidden
+  
 
-img
+img 
   border: 0
   -ms-interpolation-mode: bicubic
 
-table
+table 
   caption-side: bottom
   border-collapse: collapse
   text-indent: 0
   border-color: currentColor
 
-caption
+caption 
   padding-top: 0.5rem
   padding-bottom: 0.5rem
   color: inherit
   text-align: left
 
-th
+th 
   text-align: inherit
   text-align: -webkit-match-parent
 
@@ -380,31 +284,31 @@ tbody,
 tfoot,
 tr,
 td,
-th
+th 
   border-color: inherit
   border-style: solid
   border-width: 0
 
-label
+label 
   display: inline-block
 
-button
+button 
   border-radius: 0
   text-transform: none
-
-  &:focus
+  &:focus 
     outline: dotted 1px
     outline: -webkit-focus-ring-color auto 5px
+  
 
 input,
-button
+button 
   overflow: visible
 
 input,
 button,
 select,
 optgroup,
-textarea
+textarea 
   margin: 0
   font-family: inherit
   font-size: inherit
@@ -413,7 +317,7 @@ textarea
 button,
 input,
 select,
-textarea
+textarea 
   background-color: transparent
   border: 1px solid WindowFrame
   color: inherit
@@ -422,53 +326,53 @@ textarea
   padding: 0.25em 0.375em
 
 button,
-select
+select 
   text-transform: none
 
-[role="button"]
+[role="button"] 
   cursor: pointer
 
-select
+select 
   -moz-appearance: none
   -webkit-appearance: none
   text-transform: none
   word-wrap: normal
+  &:not([multiple]):not([size]) 
+    background-image: "data:image/svg+xmlcharset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='4'%3E%3Cpath d='M4 0h6L7 4'/%3E%3C/svg%3E"
+  
 
-  &:not([multiple]):not([size])
-    background-image: "data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='4'%3E%3Cpath d='M4 0h6L7 4'/%3E%3C/svg%3E"
-
-::-ms-expand
+::-ms-expand 
   display: none
 
-[list]::-webkit-calendar-picker-indicator
+[list]::-webkit-calendar-picker-indicator 
   display: none
 
 button,
 [type="button"],
 [type="reset"],
-[type="submit"]
+[type="submit"] 
   -webkit-appearance: button
-
-  &:not(disabled)
+  &:not(disabled) 
     cursor: pointer
+  
 
-::-webkit-file-upload-button
+::-webkit-file-upload-button 
   font: inherit
   -webkit-appearance: button
 
-textarea
+textarea 
   overflow: auto
   -ms-overflow-style: scrollbar
   resize: vertical
   vertical-align: top
 
-fieldset
+fieldset 
   min-width: 0
   padding: 0.35em 0.75em 0.625em
   margin: 0
   border: 1px solid inherit
 
-legend
+legend 
   float: left
   width: 100%
   padding: 0
@@ -478,13 +382,14 @@ legend
   max-width: 100%
   white-space: normal
 
-  @media ( max-width: 1200px )
+  @media (max-width: 1200px) 
     font-size: 1.5rem
-
-  & + *
+  
+  & + * 
     clear: left
+  
 
-dialog
+dialog 
   background-color: inherit
   border: solid
   color: inherit
@@ -500,9 +405,9 @@ dialog
   width: -webkit-fit-content
   width: -moz-fit-content
   width: fit-content
-
-  &:not([open])
+  &:not([open]) 
     display: none
+  
 
 ::-webkit-datetime-edit-fields-wrapper,
 ::-webkit-datetime-edit-text,
@@ -510,21 +415,21 @@ dialog
 ::-webkit-datetime-edit-hour-field,
 ::-webkit-datetime-edit-day-field,
 ::-webkit-datetime-edit-month-field,
-::-webkit-datetime-edit-year-field
+::-webkit-datetime-edit-year-field 
   padding: 0
 
 ::-webkit-inner-spin-button,
-::-webkit-outer-spin-button
+::-webkit-outer-spin-button 
   height: auto
 
-::-webkit-input-placeholder
+::-webkit-input-placeholder 
   color: inherit
   opacity: 0.54
 
-input::placeholder
+input::placeholder 
   opacity: 1
-  
-[type="search"]
+
+[type="search"] 
   outline-offset: -2px
   -webkit-appearance: none
   -moz-appearance: none
@@ -533,74 +438,73 @@ input::placeholder
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration
+input[type="search"]::-webkit-search-results-decoration 
   -webkit-appearance: none
   -moz-appearance: none
 
 [type="tel"],
 [type="url"],
 [type="email"],
-[type="number"]
+[type="number"] 
   direction: ltr
 
-::-webkit-color-swatch-wrapper
+::-webkit-color-swatch-wrapper 
   padding: 0
 
-::-moz-focus-inner
+::-moz-focus-inner 
   padding: 0
   border-style: none
 
-::-moz-ui-invalid
+::-moz-ui-invalid 
   box-shadow: none
 
-::-moz-focusring
+::-moz-focusring 
   outline: 1px dotted ButtonText
 
-output
+output 
   display: inline-block
 
-iframe
+iframe 
   border: none
 
 audio,
 canvas,
-video
+video 
   display: inline
   display: inline-block
   zoom: 1
   max-width: 100%
 
-audio:not([controls])
+audio:not([controls]) 
   display: none
   height: 0
 
-summary
+summary 
   display: list-item
   cursor: pointer
 
-progress
+progress 
   display: inline-block
   vertical-align: baseline
 
-template
+template 
   display: none
 
-[hidden]
+[hidden] 
   display: none
 
-[aria-busy="true"]
+[aria-busy="true"] 
   cursor: progress
 
-[aria-controls]
+[aria-controls] 
   cursor: pointer
 
 [aria-disabled="true"],
-[disabled]
+[disabled] 
   cursor: not-allowed
 
-[aria-hidden="false"][hidden="false"]
+[aria-hidden="false"][hidden="false"] 
   display: initial
-
-  &:not(:focus)
+  &:not(:focus) 
     clip: rect(0, 0, 0, 0)
     position: absolute
