:x::fire: Fix Body Tag

--- a/src/stylus/reseter.styl
+++ b/src/stylus/reseter.styl
@@ -20,11 +20,10 @@ html
   vertical-align: baseline
   word-break: normal
   color: inherit
-  margin: 0
-  padding: 0
   -webkit-text-size-adjust: 100%
   -webkit-tap-highlight-color: transparent
-
+body
+  margin: 0
 article,
 aside,
 details,
