--- a/css/reseter.css
+++ b/css/reseter.css
@@ -7,8 +7,8 @@
 }
 @media (prefers-reduced-motion: reduce) {
   *,
-  *::before,
-  *::after {
+*::before,
+*::after {
     -webkit-animation-delay: -1ms;
             animation-delay: -1ms;
     -webkit-animation-duration: 1ms;
@@ -21,17 +21,21 @@
     transition-duration: 0s;
   }
 }
+
 html {
   font: 400 1rem/1.5 system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background: inherit;
   vertical-align: baseline;
   word-break: normal;
   color: inherit;
-  margin: 0;
-  padding: 0;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
 }
+
+body {
+  margin: 0;
+}
+
 article,
 aside,
 details,
@@ -45,9 +49,11 @@ nav,
 section {
   display: block;
 }
+
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0;
 }
+
 hr {
   margin: 1rem 0;
   color: inherit;
@@ -59,6 +65,7 @@ hr {
 hr:not([size]) {
   height: 1px;
 }
+
 h1,
 h2,
 h3,
@@ -68,6 +75,7 @@ h6 {
   margin: 0 initial 0.5rem;
   font: inherit inherit 500 unset/1.2 inherit;
 }
+
 h1 {
   font-size: calc(1.375rem + 1.5vw);
 }
@@ -76,6 +84,7 @@ h1 {
     font-size: 2.5rem;
   }
 }
+
 h2 {
   font-size: calc(1.325rem + 0.9vw);
 }
@@ -84,6 +93,7 @@ h2 {
     font-size: 2rem;
   }
 }
+
 h3 {
   font-size: calc(1.3rem + 0.6vw);
 }
@@ -92,6 +102,7 @@ h3 {
     font-size: 1.75rem;
   }
 }
+
 h4 {
   font-size: calc(1.275rem + 0.3vw);
 }
@@ -100,15 +111,19 @@ h4 {
     font-size: 1.5rem;
   }
 }
+
 h5 {
   font-size: 1.25rem;
 }
+
 h6 {
   font-size: 1rem;
 }
+
 p {
   margin: 0 0 1rem;
 }
+
 abbr[title],
 abbr[data-bs-original-title] {
   -webkit-text-decoration: underline dotted;
@@ -117,25 +132,30 @@ abbr[data-bs-original-title] {
   -webkit-text-decoration-skip-ink: none;
           text-decoration-skip-ink: none;
 }
+
 address {
   font: normal inherit inherit/inherit inherit;
   margin: 0 0 1rem;
 }
+
 ol,
 ul {
   padding-left: 2rem;
 }
+
 ol,
 ul,
 dl {
   margin: 0 0 1rem;
 }
+
 ol ol,
 ul ul,
 ol ul,
 ul ol {
   margin: 0;
 }
+
 nav li {
   list-style: none;
   padding: 0;
@@ -143,27 +163,34 @@ nav li {
 nav li::before {
   content: "​";
 }
+
 dt {
   font-weight: 700;
 }
+
 dd {
   margin-bottom: 0.5rem;
   margin-left: 0;
 }
+
 blockquote {
   margin: 0 0 1rem;
 }
+
 b,
 strong {
   font-weight: 700;
 }
+
 small {
   font-size: 0.875em;
 }
+
 mark {
   padding: 0.2em;
   background-color: currentColor;
 }
+
 sub,
 sup {
   position: relative;
@@ -171,12 +198,15 @@ sup {
   line-height: 0;
   vertical-align: baseline;
 }
+
 sub {
   bottom: -0.25em;
 }
+
 sup {
   top: -0.5em;
 }
+
 a {
   cursor: pointer;
   color: #3333e1;
@@ -190,12 +220,12 @@ a:hover {
 a:focus {
   outline: thin dotted;
 }
-a:not([href]):not(class),
-a:not([href]):not([class]):hover {
+a:not([href]):not(class), a:not([href]):not([class]):hover {
   cursor: default;
   color: inherit;
   text-decoration: none;
 }
+
 a,
 area,
 button,
@@ -207,12 +237,14 @@ textarea,
 [tabindex] {
   touch-action: manipulation;
 }
+
 pre,
 code,
 kbd,
 samp {
   font: 1.05em "Fira Code", "Cascadia Code", Consolas, "Inconsolata", Monaco, Menlo, "Noto Mono", "Roboto Mono", "Droid Sans Mono", "Ubuntu Mono", "Ubuntu Monospace", "Source Code Pro", "Oxygen Mono", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
 pre {
   display: block;
   margin-top: 0;
@@ -226,14 +258,17 @@ pre code {
   color: inherit;
   word-break: normal;
 }
+
 code {
   font-size: 0.875em;
   color: inherit;
   word-wrap: break-word;
 }
+
 a > code {
   color: inherit;
 }
+
 kbd {
   padding: 0.2rem 0.4rem;
   font-size: 0.875em;
@@ -246,9 +281,11 @@ kbd kbd {
   font-size: 1em;
   font-weight: 700;
 }
+
 figure {
   margin: 0 0 1rem;
 }
+
 iframe,
 img,
 input,
@@ -257,6 +294,7 @@ textarea {
   height: auto;
   max-width: 100%;
 }
+
 audio,
 canvas,
 iframe,
@@ -265,32 +303,38 @@ svg,
 video {
   vertical-align: middle;
 }
+
 svg:not([fill]) {
   fill: currentColor;
 }
 svg:not(:root) {
   overflow: hidden;
 }
+
 img {
   border: 0;
   -ms-interpolation-mode: bicubic;
 }
+
 table {
   caption-side: bottom;
   border-collapse: collapse;
   text-indent: 0;
   border-color: currentColor;
 }
+
 caption {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   color: inherit;
   text-align: left;
 }
+
 th {
   text-align: inherit;
   text-align: -webkit-match-parent;
 }
+
 thead,
 tbody,
 tfoot,
@@ -301,9 +345,11 @@ th {
   border-style: solid;
   border-width: 0;
 }
+
 label {
   display: inline-block;
 }
+
 button {
   border-radius: 0;
   text-transform: none;
@@ -312,10 +358,12 @@ button:focus {
   outline: dotted 1px;
   outline: -webkit-focus-ring-color auto 5px;
 }
+
 input,
 button {
   overflow: visible;
 }
+
 input,
 button,
 select,
@@ -326,6 +374,7 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
+
 button,
 input,
 select,
@@ -337,13 +386,16 @@ textarea {
   letter-spacing: inherit;
   padding: 0.25em 0.375em;
 }
+
 button,
 select {
   text-transform: none;
 }
-[role="button"] {
+
+[role=button] {
   cursor: pointer;
 }
+
 select {
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -353,40 +405,47 @@ select {
 select:not([multiple]):not([size]) {
   background-image: "data:image/svg+xmlcharset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='4'%3E%3Cpath d='M4 0h6L7 4'/%3E%3C/svg%3E";
 }
+
 ::-ms-expand {
   display: none;
 }
+
 [list]::-webkit-calendar-picker-indicator {
   display: none;
 }
+
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
 }
 button:not(disabled),
-[type="button"]:not(disabled),
-[type="reset"]:not(disabled),
-[type="submit"]:not(disabled) {
+[type=button]:not(disabled),
+[type=reset]:not(disabled),
+[type=submit]:not(disabled) {
   cursor: pointer;
 }
+
 ::-webkit-file-upload-button {
   font: inherit;
   -webkit-appearance: button;
 }
+
 textarea {
   overflow: auto;
   -ms-overflow-style: scrollbar;
   resize: vertical;
   vertical-align: top;
 }
+
 fieldset {
   min-width: 0;
   padding: 0.35em 0.75em 0.625em;
   margin: 0;
   border: 1px solid inherit;
 }
+
 legend {
   float: left;
   width: 100%;
@@ -405,6 +464,7 @@ legend {
 legend + * {
   clear: left;
 }
+
 dialog {
   background-color: inherit;
   border: solid;
@@ -425,6 +485,7 @@ dialog {
 dialog:not([open]) {
   display: none;
 }
+
 ::-webkit-datetime-edit-fields-wrapper,
 ::-webkit-datetime-edit-text,
 ::-webkit-datetime-edit-minute,
@@ -434,64 +495,80 @@ dialog:not([open]) {
 ::-webkit-datetime-edit-year-field {
   padding: 0;
 }
+
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
   height: auto;
 }
+
 ::-webkit-input-placeholder {
   color: inherit;
   opacity: 0.54;
 }
+
 input::-webkit-input-placeholder {
   opacity: 1;
 }
+
 input::-moz-placeholder {
   opacity: 1;
 }
+
 input:-ms-input-placeholder {
   opacity: 1;
 }
+
 input::placeholder {
   opacity: 1;
 }
-[type="search"] {
+
+[type=search] {
   outline-offset: -2px;
   -webkit-appearance: none;
   -moz-appearance: none;
   box-sizing: content-box;
 }
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
+
+input[type=search]::-webkit-search-cancel-button,
+input[type=search]::-webkit-search-decoration,
+input[type=search]::-webkit-search-results-button,
+input[type=search]::-webkit-search-results-decoration {
   -webkit-appearance: none;
   -moz-appearance: none;
 }
-[type="tel"],
-[type="url"],
-[type="email"],
-[type="number"] {
+
+[type=tel],
+[type=url],
+[type=email],
+[type=number] {
   direction: ltr;
 }
+
 ::-webkit-color-swatch-wrapper {
   padding: 0;
 }
+
 ::-moz-focus-inner {
   padding: 0;
   border-style: none;
 }
+
 ::-moz-ui-invalid {
   box-shadow: none;
 }
+
 ::-moz-focusring {
   outline: 1px dotted ButtonText;
 }
+
 output {
   display: inline-block;
 }
+
 iframe {
   border: none;
 }
+
 audio,
 canvas,
 video {
@@ -500,38 +577,47 @@ video {
   zoom: 1;
   max-width: 100%;
 }
+
 audio:not([controls]) {
   display: none;
   height: 0;
 }
+
 summary {
   display: list-item;
   cursor: pointer;
 }
+
 progress {
   display: inline-block;
   vertical-align: baseline;
 }
+
 template {
   display: none;
 }
+
 [hidden] {
   display: none;
 }
-[aria-busy="true"] {
+
+[aria-busy=true] {
   cursor: progress;
 }
+
 [aria-controls] {
   cursor: pointer;
 }
-[aria-disabled="true"],
+
+[aria-disabled=true],
 [disabled] {
   cursor: not-allowed;
 }
-[aria-hidden="false"][hidden="false"] {
+
+[aria-hidden=false][hidden=false] {
   display: initial;
 }
-[aria-hidden="false"][hidden="false"]:not(:focus) {
+[aria-hidden=false][hidden=false]:not(:focus) {
   clip: rect(0, 0, 0, 0);
   position: absolute;
 }
