--- a/src/sass/reseter.sass
+++ b/src/sass/reseter.sass
@@ -20,10 +20,11 @@ html
   vertical-align: baseline
   word-break: normal
   color: inherit
-  margin: 0
-  padding: 0
   -webkit-text-size-adjust: 100%
   -webkit-tap-highlight-color: transparent
+
+body
+  margin: 0
 
 article,
 aside,
