--- a/src/scss/reseter.scss
+++ b/src/scss/reseter.scss
@@ -23,10 +23,11 @@ html {
   vertical-align: baseline;
   word-break: normal;
   color: inherit;
-  margin: 0;
-  padding: 0;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
+}
+body {
+  margin: 0;
 }
 article,
 aside,
