:building_construction: Build Files
* Build Main File
* Build Min File
* Build Styled-Components:Js File
* Build Styled-Components:MJs File
* Build Styled-Components:Ts File

--- a/css/reseter.css
+++ b/css/reseter.css
@@ -126,7 +126,9 @@ p {
 }
 
 abbr[title],
-abbr[data-bs-original-title] {
+abbr[data-bs-original-title],
+acronym[title],
+acronym[data-bs-original-title] {
   -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
   cursor: help;
