--- a/src/scss/optionated.scss
+++ b/src/scss/optionated.scss
@@ -1,4 +1,4 @@
 @charset "UTF-8";
 
-@import "./reseter.less";
-@import "./utility/system-fonts.less";
+@import "./reseter.scss";
+@import "./utility/system-fonts.scss";
