--- a/css/optionated.css
+++ b/css/optionated.css
@@ -3,34 +3,27 @@
 *::after {
   box-sizing: inherit;
 }
-
 html {
   line-height: 1.15;
   box-sizing: border-box;
 }
-
 body {
   margin: 0;
 }
-
 main {
   display: block;
 }
-
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
-
 a {
   background-color: transparent;
 }
-
 abbr[title] {
   -webkit-text-decoration: underline dotted;
           text-decoration: underline dotted;
 }
-
 code,
 kbd,
 samp,
@@ -38,7 +31,6 @@ pre {
   font-family: monospace, monospace;
   font-size: 1em;
 }
-
 sub,
 sup {
   font-size: 75%;
@@ -46,15 +38,12 @@ sup {
   position: relative;
   vertical-align: baseline;
 }
-
 sub {
   bottom: -0.25em;
 }
-
 sup {
   top: -0.5em;
 }
-
 button,
 input,
 optgroup,
@@ -64,35 +53,29 @@ textarea {
   line-height: inherit;
   border: 1px solid currentColor;
 }
-
 button {
   overflow: visible;
   text-transform: none;
 }
-
 button,
-[type=button],
-[type=reset],
-[type=submit] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
   padding: 1px 6px;
 }
-
 input {
   overflow: visible;
 }
-
 input,
 textarea {
   padding: 1px;
   box-sizing: border-box;
 }
-
 fieldset {
   border: 1px solid currentColor;
   margin: 0 2px;
 }
-
 legend {
   box-sizing: border-box;
   color: inherit;
@@ -100,76 +83,61 @@ legend {
   max-width: 100%;
   white-space: normal;
 }
-
 progress {
   display: inline-block;
   vertical-align: baseline;
 }
-
 select {
   text-transform: none;
 }
-
 textarea {
   margin: 0;
   overflow: auto;
   vertical-align: top;
 }
-
-[type=search] {
+[type="search"] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
-
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
   height: auto;
 }
-
 ::-webkit-color-swatch,
 ::-moz-color-swatch {
   border: 0;
 }
-
 ::-webkit-color-swatch-wrapper,
 ::-moz-color-swatch-wrapper {
   padding: 0;
 }
-
 ::-webkit-input-placeholder {
   color: inherit;
   opacity: 0.54;
 }
-
 ::-webkit-search-decoration {
   -webkit-appearance: none;
 }
-
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   font: inherit;
 }
-
 ::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
-
 :-moz-focusring {
   outline: 1px dotted ButtonText;
 }
-
 :-moz-ui-invalid {
   box-shadow: none;
 }
-
 hr {
   box-sizing: content-box;
   height: 0;
   color: inherit;
   overflow: visible;
 }
-
 dl dl,
 dl ol,
 dl ul,
@@ -177,46 +145,37 @@ ol dl,
 ul dl {
   margin: 0;
 }
-
 ol ol,
 ol ul,
 ul ol,
 ul ul {
   margin: 0;
 }
-
 b,
 strong {
   font-weight: bolder;
 }
-
 audio,
 video {
   display: inline-block;
 }
-
 audio:not([controls]) {
   display: none;
   height: 0;
 }
-
 img {
   border-style: none;
 }
-
 svg:not(:root) {
   overflow: hidden;
 }
-
 table {
   text-indent: 0;
   border-color: inherit;
 }
-
 details {
   display: block;
 }
-
 dialog {
   background-color: inherit;
   border: solid;
@@ -234,27 +193,21 @@ dialog {
   width: -webkit-fit-content;
   width: fit-content;
 }
-
 dialog:not([open]) {
   display: none;
 }
-
 summary {
   display: list-item;
 }
-
 canvas {
   display: inline-block;
 }
-
 template {
   display: none;
 }
-
 [hidden] {
   display: none;
 }
-
 :root {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
