--- a/src/scss/reseter.scss
+++ b/src/scss/reseter.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@import "./components/global.less";
-@import "./components/text.less";
-@import "./components/forms.less";
-@import "./components/other.less";
+@import "./components/global.scss";
+@import "./components/text.scss";
+@import "./components/forms.scss";
+@import "./components/other.scss";
