--- a/src/stylus/reseter.styl
+++ b/src/stylus/reseter.styl
@@ -1,208 +1,4 @@
-@charset "UTF-8"
-
-*,
-*::before,
-*::after
-  box-sizing: inherit
-
-html
-  line-height: 1.15
-  box-sizing: border-box
-
-body
-  margin: 0
-
-main
-  display: block
-
-h1
-  font-size: 2em
-  margin: 0.67em 0
-
-hr
-  box-sizing: content-box
-  height: 0
-  color: inherit
-  overflow: visible
-
-a
-  background-color: transparent
-
-abbr[title]
-  text-decoration: underline dotted
-
-dl dl,
-dl ol,
-dl ul,
-ol dl,
-ul dl
-  margin: 0
-
-ol ol,
-ol ul,
-ul ol,
-ul ul
-  margin: 0
-
-b,
-strong
-  font-weight: bolder
-
-code,
-kbd,
-samp,
-pre
-  font-family: monospace, monospace
-  font-size: 1em
-
-sub,
-sup
-  font-size: 75%
-  line-height: 0
-  position: relative
-  vertical-align: baseline
-
-sub
-  bottom: -0.25em
-
-sup
-  top: -0.5em
-
-audio,
-video
-  display: inline-block
-
-audio:not([controls])
-  display: none
-  height: 0
-
-img
-  border-style: none
-
-svg:not(:root)
-  overflow: hidden
-
-table
-  text-indent: 0
-  border-color: inherit
-
-button,
-input,
-optgroup,
-select,
-textarea
-  margin: 0
-  line-height: inherit
-  border: 1px solid currentColor
-
-button
-  overflow: visible
-  text-transform: none
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"]
-  -webkit-appearance: button
-	padding: 1px 6px
-
-input
-  overflow: visible
-
-input,
-textarea
-  padding: 1px
-  box-sizing: border-box
-
-fieldset
-	border: 1px solid currentColor
-	margin: 0 2px
-
-legend
-  box-sizing: border-box
-  color: inherit
-  display: table
-  max-width: 100%
-  white-space: normal
-
-progress
-  display: inline-block
-  vertical-align: baseline
-
-select
-  text-transform: none
-
-textarea
-  margin: 0
-  overflow: auto
-  vertical-align: top
-
-[type="search"]
-  -webkit-appearance: textfield
-  outline-offset: -2px
-
-::-webkit-inner-spin-button,
-::-webkit-outer-spin-button
-  height: auto
-
-::-webkit-color-swatch,
-::-moz-color-swatch
-	border: 0
-
-::-webkit-color-swatch-wrapper,
-::-moz-color-swatch-wrapper
-	padding: 0
-
-::-webkit-input-placeholder
-  color: inherit
-  opacity: 0.54
-
-::-webkit-search-decoration
-  -webkit-appearance: none
-
-::-webkit-file-upload-button
-  -webkit-appearance: button
-  font: inherit
-
-::-moz-focus-inner
-  border-style: none
-  padding: 0
-
-:-moz-focusring
-  outline: 1px dotted ButtonText
-
-:-moz-ui-invalid
-  box-shadow: none
-
-details
-  display: block
-
-dialog
-  background-color: inherit
-  border: solid
-  color: inherit
-  display: block
-  height: -webkit-fit-content
-  height: fit-content
-  left: 0
-  margin: auto
-  padding: 1em
-  position: absolute
-  right: 0
-  width: -moz-fit-content
-  width: fit-content
-
-dialog:not([open])
-  display: none
-
-summary
-  display: list-item
-
-canvas
-  display: inline-block
-
-template
-  display: none
-
-[hidden]
-  display: none
+@import "./components/global.styl"
+@import "./components/text.styl"
+@import "./components/forms.styl"
+@import "./components/other.styl"
