--- a/src/stylus/components/global.styl
+++ b/src/stylus/components/global.styl
@@ -1,19 +1,22 @@
 *,
 *::before,
-*::after
-  box-sizing: inherit
+*::after {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+}
 
-html
-  line-height: 1.15
-  box-sizing: border-box
-  font-family: sans-serif
+html {
+  line-height: 1.15;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
 
-body
-  margin: 0
+main {
+  display: block;
+}
 
-main
-  display: block
-
-h1
-  font-size: 2em
-  margin: 0.67em 0
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
