--- a/css/optionated.css
+++ b/css/optionated.css
@@ -2,16 +2,14 @@
 *::before,
 *::after {
   box-sizing: inherit;
+  padding: 0;
+  margin: 0;
 }
 
 html {
   line-height: 1.15;
   box-sizing: border-box;
   font-family: sans-serif;
-}
-
-body {
-  margin: 0;
 }
 
 main {
@@ -29,7 +27,7 @@ a {
 
 abbr[title] {
   -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
+          text-decoration: underline dotted;
 }
 
 code,
@@ -61,7 +59,6 @@ input,
 optgroup,
 select,
 textarea {
-  margin: 0;
   line-height: inherit;
   border: 1px solid currentColor;
 }
@@ -72,9 +69,9 @@ button {
 }
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
   padding: 1px 6px;
 }
@@ -86,7 +83,6 @@ input {
 input,
 textarea {
   padding: 1px;
-  box-sizing: border-box;
 }
 
 fieldset {
@@ -95,7 +91,6 @@ fieldset {
 }
 
 legend {
-  box-sizing: border-box;
   color: inherit;
   display: table;
   max-width: 100%;
@@ -112,14 +107,17 @@ select {
 }
 
 textarea {
-  margin: 0;
   overflow: auto;
   vertical-align: top;
 }
 
-[type="search"] {
+[type=search] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
+}
+
+[type=color] {
+  background: inherit;
 }
 
 ::-webkit-inner-spin-button,
@@ -127,25 +125,12 @@ textarea {
   height: auto;
 }
 
-::-webkit-color-swatch,
-::-moz-color-swatch {
-  border: 0;
-}
-
-::-webkit-color-swatch-wrapper,
-::-moz-color-swatch-wrapper {
-  padding: 0;
-}
-
 ::-webkit-input-placeholder {
   color: inherit;
-  opacity: 0.54;
+  opacity: 0.5;
 }
 
-::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
+::-webkit-search-decoration,
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   font: inherit;
@@ -153,7 +138,6 @@ textarea {
 
 ::-moz-focus-inner {
   border-style: none;
-  padding: 0;
 }
 
 :-moz-focusring {
@@ -171,18 +155,21 @@ hr {
   overflow: visible;
 }
 
-dl dl,
-dl ol,
-dl ul,
-ol dl,
-ul dl {
-  margin: 0;
+dl,
+ol,
+ul {
+  margin: 1em 0;
 }
 
 ol ol,
 ol ul,
+ol dl,
 ul ol,
-ul ul {
+ul ul,
+ul dl,
+dl ol,
+dl ul,
+dl dl {
   margin: 0;
 }
 
@@ -231,8 +218,8 @@ dialog {
   padding: 1em;
   position: absolute;
   right: 0;
-  width: -moz-fit-content;
   width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
 }
 
@@ -257,6 +244,5 @@ template {
 }
 
 :root {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
