--- a/src/less/components/global.less
+++ b/src/less/components/global.less
@@ -2,16 +2,14 @@
 *::before,
 *::after {
   box-sizing: inherit;
+  padding: 0;
+  margin: 0;
 }
 
 html {
   line-height: 1.15;
   box-sizing: border-box;
   font-family: sans-serif;
-}
-
-body {
-  margin: 0;
 }
 
 main {
