--- a/src/sass/components/global.sass
+++ b/src/sass/components/global.sass
@@ -2,14 +2,13 @@
 *::before,
 *::after
   box-sizing: inherit
+  padding: 0
+  margin: 0
 
 html
   line-height: 1.15
   box-sizing: border-box
   font-family: sans-serif
-
-body
-  margin: 0
 
 main
   display: block
