--- a/src/scss/components/forms.scss
+++ b/src/scss/components/forms.scss
@@ -3,7 +3,6 @@ input,
 optgroup,
 select,
 textarea {
-  margin: 0;
   line-height: inherit;
   border: 1px solid currentColor;
 }
@@ -28,7 +27,6 @@ input {
 input,
 textarea {
   padding: 1px;
-  box-sizing: border-box;
 }
 
 fieldset {
@@ -37,7 +35,6 @@ fieldset {
 }
 
 legend {
-  box-sizing: border-box;
   color: inherit;
   display: table;
   max-width: 100%;
@@ -54,7 +51,6 @@ select {
 }
 
 textarea {
-  margin: 0;
   overflow: auto;
   vertical-align: top;
 }
@@ -64,30 +60,21 @@ textarea {
   outline-offset: -2px;
 }
 
+[type="color"] {
+  background: inherit;
+}
+
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
   height: auto;
 }
 
-::-webkit-color-swatch,
-::-moz-color-swatch {
-	border: 0;
-}
-
-::-webkit-color-swatch-wrapper,
-::-moz-color-swatch-wrapper {
-	padding: 0;
-}
-
 ::-webkit-input-placeholder {
   color: inherit;
-  opacity: 0.54;
+  opacity: 0.5;
 }
 
-::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
+::-webkit-search-decoration,
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   font: inherit;
@@ -95,7 +82,6 @@ textarea {
 
 ::-moz-focus-inner {
   border-style: none;
-  padding: 0;
 }
 
 :-moz-focusring {
