--- a/src/scss/components/other.scss
+++ b/src/scss/components/other.scss
@@ -5,19 +5,22 @@ hr {
   overflow: visible;
 }
 
-dl dl,
-dl ol,
-dl ul,
-ol dl,
-ul dl {
-  margin: 0;
+dl,
+ol,
+ul {
+  margin: 1em 0
 }
 
 ol ol,
 ol ul,
+ol dl,
 ul ol,
-ul ul {
-  margin: 0;
+ul ul,
+ul dl,
+dl ol,
+dl ul,
+dl dl {
+  margin: 0
 }
 
 b,
@@ -58,14 +61,12 @@ dialog {
   border: solid;
   color: inherit;
   display: block;
-  height: -webkit-fit-content;
   height: fit-content;
   left: 0;
   margin: auto;
   padding: 1em;
   position: absolute;
   right: 0;
-  width: -moz-fit-content;
   width: fit-content;
 }
 
