--- a/src/stylus/components/other.styl
+++ b/src/stylus/components/other.styl
@@ -1,73 +1,91 @@
-hr
-  box-sizing: content-box
-  height: 0
-  color: inherit
-  overflow: visible
+hr {
+  box-sizing: content-box;
+  height: 0;
+  color: inherit;
+  overflow: visible;
+}
 
-dl dl,
-dl ol,
-dl ul,
-ol dl,
-ul dl
-  margin: 0
+dl,
+ol,
+ul {
+  margin: 1em 0
+}
 
 ol ol,
 ol ul,
+ol dl,
 ul ol,
-ul ul
+ul ul,
+ul dl,
+dl ol,
+dl ul,
+dl dl {
   margin: 0
+}
 
 b,
-strong
-  font-weight: bolder
+strong {
+  font-weight: bolder;
+}
 
 audio,
-video
-  display: inline-block
+video {
+  display: inline-block;
+}
 
-audio:not([controls])
-  display: none
-  height: 0
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
 
-img
-  border-style: none
+img {
+  border-style: none;
+}
 
-svg:not(:root)
-  overflow: hidden
+svg:not(:root) {
+  overflow: hidden;
+}
 
-table
-  text-indent: 0
-  border-color: inherit
+table {
+  text-indent: 0;
+  border-color: inherit;
+}
 
-details
-  display: block
 
-dialog
-  background-color: inherit
-  border: solid
-  color: inherit
-  display: block
-  height: -webkit-fit-content
-  height: fit-content
-  left: 0
-  margin: auto
-  padding: 1em
-  position: absolute
-  right: 0
-  width: -moz-fit-content
-  width: fit-content
+details {
+  display: block;
+}
 
-dialog:not([open])
-  display: none
+dialog {
+  background-color: inherit;
+  border: solid;
+  color: inherit;
+  display: block;
+  height: fit-content;
+  left: 0;
+  margin: auto;
+  padding: 1em;
+  position: absolute;
+  right: 0;
+  width: fit-content;
+}
 
-summary
-  display: list-item
+dialog:not([open]) {
+  display: none;
+}
 
-canvas
-  display: inline-block
+summary {
+  display: list-item;
+}
 
-template
-  display: none
+canvas {
+  display: inline-block;
+}
 
-[hidden]
-  display: none
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
