--- a/src/stylus/components/forms.styl
+++ b/src/stylus/components/forms.styl
@@ -66,7 +66,7 @@ textarea
   font: inherit
 
 ::-moz-focus-inner
-  border-style: none
+  border: 0
 
 :-moz-focusring
   outline: 1px dotted ButtonText
