--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -6,22 +6,22 @@
   margin: 0;
 }
 
-html {
+:where(:root) {
   line-height: 1.15;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-main {
+:where(main) {
   display: block;
 }
 
-h1 {
+:where(h1) {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
-p + p {
+:where(p + p) {
   margin-top: 1rem;
 }
-
