--- a/src/components/text.scss
+++ b/src/components/text.scss
@@ -1,31 +1,27 @@
-a {
+:where(a) {
   background-color: transparent;
 }
 
-abbr[title] {
+:where(abbr[title]) {
   text-decoration: underline dotted;
 }
 
-code,
-kbd,
-samp,
-pre {
+:where(code, kbd, samp, pre) {
   font-family: monospace, monospace;
   font-size: 1em;
 }
 
-sub,
-sup {
+:where(sub, sup) {
   font-size: 75%;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
 }
 
-sub {
+:where(sub) {
   bottom: -0.25em;
 }
 
-sup {
+:where(sup) {
   top: -0.5em;
 }
